# big-integer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: core.h  generation.h  integer.h  op.h  op_int.h  operation.h  rsa.h
src/: generation.c  integer.c  main.c  op.c  op_int.c  operation.c  rsa.c
