# Project Name
PROJECT(BigInteger)
# CMake Version
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

# SET(CMAKE_BUILD_TYPE "Debug")
# SET(SRC_LIST src/main.cpp)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})

# Add Source Files
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src DIR_SRCS)
# Add header files
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
# Add link library
# LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

ADD_EXECUTABLE(${PROJECT_NAME} ${DIR_SRCS})
